crates/narrative/tests/compile-fail/missing-step-text.stderr
error: expected a step or const
 --> tests/compile-fail/missing-step-text.rs:4:5
  |
4 |     fn invalid_step(&self);
  |     ^^
